--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "geojson": "^0.5.0",
     "hls.js": "^1.6.2",
     "leaflet": "^1.9.4",
